unpackaged/main/default/objects/litify_ext__Role_Creation__mdt/litify_ext__Role_Creation__mdt.object-meta.xml
<CustomObject>
    <label>Role Creation</label>
    <pluralLabel>Role Creation</pluralLabel>
</CustomObject>