unpackaged/main/default/objects/litify_ext__Role_Creation__mdt/fields/litify_ext__Category_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Category_Name__c</fullName>
    <label>Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>