unpackaged/main/default/objects/litify_ext__Role_Creation__mdt/fields/litify_ext__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Role_Creation</relationshipLabel>
    <relationshipName>Role_Creation</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>