unpackaged/main/default/objects/litify_ext__Role_Creation__mdt/fields/litify_ext__Role_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Role_Field_Name__c</fullName>
    <label>Role Field Name</label>
    <metadataRelationshipControllingField>litify_ext__Role_Creation__mdt.litify_ext__Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Role_Creation1</relationshipLabel>
    <relationshipName>Role_Creation1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>