unpackaged/main/default/objects/litify_ext__Role_Creation__mdt/fields/litify_ext__Role_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Role_Sub_Category__c</fullName>
    <label>Role Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>